--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-02-23  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.4 release.
+
 2005-02-21  Raphaël Quinet  <raphael@gimp.org>
 
 	* admin/gimp-web-urls,
