--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-03-07  Sven Neumann  <sven@gimp.org>
+
+	* admin/gimp-web-urls
+	* docs/index.htrw: added link to Italian version of the docs.
+
 2005-02-23  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.4 release.
