fixed a menu item.
2005-03-29  Sven Neumann  <sven@gimp.org>

	* tutorials/Simple_Animations/index.htrw: fixed a menu item.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-03-29  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/Simple_Animations/index.htrw: fixed a menu item.
+
 2005-03-07  Sven Neumann  <sven@gimp.org>
 
 	* admin/gimp-web-urls
