--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-09  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.7 release.
+
 2005-04-20  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Simple_Animations/index.htrw: mention that "Filter All
