--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-09  Dave Neary  <bolsh@gimp.org>
+
+	* links/index.htrw: Add a link to "GIMP talk" - a community site 
+	with tutorials, user forum and other stuff.
+
 2005-05-09  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.7 release.
