Added links to Czech and French user sites.
2005-05-09  Jakub Friedl  <jfriedl@suse.cz>

  * links/index.htrw: Added links to Czech and French user sites.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-09  Jakub Friedl  <jfriedl@suse.cz>
+
+	* links/index.htrw: Added links to Czech and French user sites.
+
 2005-05-09  Dave Neary  <bolsh@gimp.org>
 
 	* links/index.htrw: Add a link to "GIMP talk" - a community site 
