--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-05-10  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/The_Basics/index.htrw: ask the user to merge down the
+	text layer instead of anchoring it.
+
 2005-05-09  Jakub Friedl  <jfriedl@suse.cz>
 
 	* links/index.htrw: Added links to Czech and French user sites.
