--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,15 @@
+2005-05-11  Raphaël Quinet  <raphael@gimp.org>
+
+	* admin/gimp-web-urls: renamed wgo:selling to http:gnu-selling,
+	added new links wgo:donating, wgo:about-selling and
+	wgo:about-linking, removed trailing index.html in some links.
+
+	* about/selling.htrw: added a link to the donations page,
+	clarified the issues surrounding the distribution of source code
+	and GIMP mirrors, added a link to a section of the GPL FAQ.
+
+	* about/index.htrw: use the new wgo: links.
+
 2005-05-11  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.3.htrw: added a first draft of release
