another bugzilla query.
2005-05-12  Sven Neumann  <sven@gimp.org>

	* release-notes/gimp-2.3.htrw: another bugzilla query.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-12  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.3.htrw: another bugzilla query.
+
 2005-05-11  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.3.htrw: link to a bugzilla query for
