--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-14  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.3.htrw: link to screenshots on dgo.
+
 2005-05-12  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.3.htrw: another bugzilla query.
