updated for 2.3.0 release.
2005-05-14  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.3.0 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-05-14  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw: updated for 2.3.0 release.
+
+2005-05-14  Sven Neumann  <sven@gimp.org>
+
 	* release-notes/gimp-2.3.htrw: link to screenshots on dgo.
 
 2005-05-12  Sven Neumann  <sven@gimp.org>
