--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-15  Sven Neumann  <sven@gimp.org>
+
+	* release-notes/gimp-2.3.htrw: link directly to the list of mirrors.
+
 2005-05-14  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.0 release.
