updated version number.
2005-05-20  Sven Neumann  <sven@gimp.org>

	* tutorials/Basic_Batch/index.htrw: updated version number.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-05-20  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/Basic_Batch/index.htrw: updated version number.
+
 2005-05-15  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.3.htrw: link directly to the list of mirrors.
