--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-09  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.1 release. 
+
 2005-05-31  Raphaël Quinet  <raphael@gimp.org>
 
 	* about/merchandise.htrw: First draft for a merchandizing
