--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-06-09  Sven Neumann  <sven@gimp.org>
 
+	* about/merchandise.htrw: fixed a typo.
+
+2005-06-09  Sven Neumann  <sven@gimp.org>
+
 	* downloads/index.htrw: updated for 2.3.1 release. 
 
 2005-05-31  Raphaël Quinet  <raphael@gimp.org>
