--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-16  Sven Neumann  <sven@gimp.org>
+
+	* install.exclude: added news.rdf.
+
 2005-06-15  Sven Neumann  <sven@gimp.org>
 
 	* macintosh/index.htrw: s/MacOSX/Mac OS X/g
