--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,10 @@
+2005-06-17  Raphaël Quinet  <raphael@gimp.org>
+
+	* about/merchandise.htrw: Updated the page to list some vendors of
+	GIMP CDs.
+
+	* about/.cvsignore: regenerated with "make cvsignore".
+
 2005-06-16  Sven Neumann  <sven@gimp.org>
 
 	* install.exclude: added news.rdf.
