--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-06-20  Raphaël Quinet  <raphael@gimp.org>
+
+	* includes/wgo-howto-bugs-init.xhtml
+	* includes/wgo-howto-source-init.xhtml
+	* includes/wgo-howto-unix-init.xhtml
+	* includes/wgo-page-init.xhtml
+	* includes/wgo-tutorial-init.xhtml: Added new "GIMP Stuff" link,
+	pointing to the merchandise page.
+
 2005-06-18  Raphaël Quinet  <raphael@gimp.org>
 
 	* macintosh/index.htrw: updated link to X11 for Max OS X, as
