updated for 2.2.8 release.
2005-06-27  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.2.8 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-27  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.8 release.
+
 2005-06-20  Raphaël Quinet  <raphael@gimp.org>
 
 	* includes/wgo-howto-bugs-init.xhtml
