--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-06-27  Michael Schumacher  <schumaml@cvs.gnome.org>
+
+	* links/index.htrw: added GIMPforum.de
+
 2005-06-27  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.8 release.
