--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-07-01  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.2 release.
+
 2005-06-27  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* links/index.htrw: added GIMPforum.de
