--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-04  Raphaël Quinet  <raphael@gimp.org>
+
+	* nopatents.html: Re-added this file, attempting to stop bad
+	software patents in Europe.
+
 2005-07-01  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.3.2 release.
