--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-06  Raphaël Quinet  <raphael@gimp.org>
+
+	* nopatents.html: Updated with the news that the European
+	Parliement has rejected the directive (until the standard GIMP
+	home page is restored).
+
 2005-07-04  Raphaël Quinet  <raphael@gimp.org>
 
 	* release-notes/gimp-2.3.htrw: Added suggestion about how to set
