updated menu location of "Offset".
2005-07-14  Sven Neumann  <sven@gimp.org>

	* tutorials/Tileable_Textures/index.htrw: updated menu location of
	"Offset".

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-14  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/Tileable_Textures/index.htrw: updated menu location of
+	"Offset".
+
 2005-07-06  Raphaël Quinet  <raphael@gimp.org>
 
 	* nopatents.html: Updated with the news that the European
