--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-07-19  Sven Neumann  <sven@gimp.org>
+
+	* tutorials/The_Basics/index.htrw: the text tool doesn't create
+	floating selections any longer.
+
 2005-07-17  Michael Schumacher  <schumaml@cvs.gnome.org>
 
 	* programmatic/downloads/MIRRORS: ftp://gimp.zeta.org.au/ doesn't
