--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,9 @@
+2005-07-31  Michael Schumacher  <schumaml@cvs.gnome.org> 
+
+	* mail_lists.htrw
+	* admin/gimp-web-urls: added RSS feeds for some mailing lists.
+	Addresses parts of bug 306160.
+
 2005-07-19  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/The_Basics/index.htrw: the text tool doesn't create
