added lt, hu, es and pl sites
2005-08-06  Michael Schumacher  <schumaml@cvs.gnome.org>

	* links/index.htrw: added lt, hu, es and pl sites

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-06  Michael Schumacher  <schumaml@cvs.gnome.org> 
+
+	* links/index.htrw: added lt, hu, es and pl sites
+
 2005-07-31  Michael Schumacher  <schumaml@cvs.gnome.org> 
 
 	* mail_lists.htrw
