updated for 2.3.3 release.
2005-08-10  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.3.3 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-10  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.3 release.
+
 2005-08-06  Michael Schumacher  <schumaml@cvs.gnome.org> 
 
 	* links/index.htrw: added lt, hu, es and pl sites
