--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,8 @@
 2005-08-10  Sven Neumann  <sven@gimp.org>
 
+	* release-notes/gimp-2.3.3.de.htrw: added a german version of a
+	press release for GIMP 2.3.3.
+
 	* downloads/index.htrw: updated for 2.3.3 release.
 
 2005-08-06  Michael Schumacher  <schumaml@cvs.gnome.org> 
