added english press release.
2005-08-10  Sven Neumann  <sven@gimp.org>

	* release-notes/gimp-2.3.3.htrw: added english press release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-08-10  Sven Neumann  <sven@gimp.org>
 
+	* release-notes/gimp-2.3.3.htrw: added english press release.
+
+2005-08-10  Sven Neumann  <sven@gimp.org>
+
 	* release-notes/gimp-2.3.3.de.htrw: added a german version of a
 	press release for GIMP 2.3.3.
 
