--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-10  Simon Budig  <simon@gimp.org>
+
+	* release-notes/gimp-2.3.3.de.htrw: minor fixes.
+
 2005-08-10  Sven Neumann  <sven@gimp.org>
 
 	* release-notes/gimp-2.3.3.htrw: added english press release.
