--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-17  Raphaël Quinet  <raphael@gimp.org>
+
+	* release-notes/gimp-2.3.3.htrw: fixed small typo/germanism.
+
 2005-08-11  Michael Schumacher  <schumaml@cvs.gnome.org> 
 
 	* links/index.htrw: added link to Carol Spears' tutorials
