--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-08-25  Sven Neumann  <sven@gimp.org>
+
+	* links/index.htrw: added gimps.de.
+
 2005-08-19  Sven Neumann  <sven@gimp.org>
 
 	* unix/fonts.htrw: changed personal gimp directory to ~/.gimp-2.2.
