--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-08-30  Raphaël Quinet  <raphael@gimp.org>
 
+	* donating/index.htrw: Added missing </p>.
+
 	* admin/gimp-web-urls: Replaced lone &'s by &amp;'s.
 
 	* index.htrw
