--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-09-07  Sven Neumann  <sven@gimp.org>
 
+	* programmatic/admin/news/wgo_news.py: do not embed body of news
+	entries in <p> element if the entry does already start with <p>.
+	This can be done a lot smarter, feel free to improve...
+
+2005-09-07  Sven Neumann  <sven@gimp.org>
+
 	* includes/wgo-page-init.xhtml: specify image size.
 
 	* index.htrw: added a header link, mainly to force an update.
