--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-09-07  Sven Neumann  <sven@gimp.org>
 
+	* programmatic/xhtml.py (absolutize): fixed implementation.
+
+2005-09-07  Sven Neumann  <sven@gimp.org>
+
 	* programmatic/admin/news/wgo_queue.py (generate_rdf): also use
 	UTC here. Changed the feed title to "GIMP News".
 
