--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-20  Simon Budig  <simon@gimp.org>
+
+	* links/index.htrw: added more links to other graphics applications,
+	yes, this includes Cinepaint.
+
 2005-09-09  Sven Neumann  <sven@gimp.org>
 
 	* includes/wgo-page-init.xhtml: close the <img> element.
