removed the link to the Cinepaint website until the lies on that webpage
2005-09-20  Sven Neumann  <sven@gimp.org>

	* links/index.htrw: removed the link to the Cinepaint website
	until the lies on that webpage are removed.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-20  Sven Neumann  <sven@gimp.org>
+
+	* links/index.htrw: removed the link to the Cinepaint website
+	until the lies on that webpage are removed.
+
 2005-09-20  Simon Budig  <simon@gimp.org>
 
 	* links/index.htrw: added more links to other graphics applications,
