--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-09-26  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.4 release.
+
 2005-09-20  Sven Neumann  <sven@gimp.org>
 
 	* links/index.htrw: removed the link to the Cinepaint website
