admin/gimp-web-urls books/guia_do_usuario.png added book by André Milani.
2005-09-26  Sven Neumann  <sven@gimp.org>

	* admin/gimp-web-urls
	* books/guia_do_usuario.png
	* books/index.htrw: added book by André Milani.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,11 @@
 2005-09-26  Sven Neumann  <sven@gimp.org>
 
+	* admin/gimp-web-urls
+	* books/guia_do_usuario.png
+	* books/index.htrw: added book by André Milani.
+
+2005-09-26  Sven Neumann  <sven@gimp.org>
+
 	* downloads/index.htrw: updated for 2.3.4 release.
 
 2005-09-20  Sven Neumann  <sven@gimp.org>
