--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-09-30  gsromero
+
+	* unix/howtos/tile_cache.htrw: updates and some info about the
+	memory calculation.
+	
 2005-09-27  Sven Neumann  <sven@gimp.org>
 
 	* admin/gimp-web-urls
