donating/AdrianLikins.png donating/ba.png donating/HiroyukiIkezoe.png
2005-10-09  Karine Delvare  <kdelvare@nerim.net>

  * donating/AdrianLikins.png
  * donating/ba.png
  * donating/HiroyukiIkezoe.png
  * donating/LarsMathiassen.png
  * donating/ShawnCollier.png
  * donating/sponsors.htrw: updated sponsors page.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,12 @@
+2005-10-09  Karine Delvare  <kdelvare@nerim.net>
+
+	* donating/AdrianLikins.png
+	* donating/ba.png
+	* donating/HiroyukiIkezoe.png
+	* donating/LarsMathiassen.png
+	* donating/ShawnCollier.png
+	* donating/sponsors.htrw: updated sponsors page.
+
 2005-09-30  gsromero
 
 	* unix/howtos/tile_cache.htrw: updates and some info about the
