--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-27  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.2.9 release.
+
 2005-10-13  Karine Delvare  <kdelvare@nerim.net>
 
 	* donating/sponsors.htrw
@@ -5,15 +9,15 @@
 
 2005-10-11  Carol Spears  <carol@gimp.org>
 
-	* applied patch from Karine Delvare that fixes the INSTALL file from
-        http://bugzilla.gnome.org/show_bug.cgi?id=318539
+	Applied patch from Karine Delvare that fixes the INSTALL file
+	from http://bugzilla.gnome.org/show_bug.cgi?id=318539
 
 2005-10-10  Karine Delvare  <kdelvare@nerim.net>
 
 	* admin/gimp-web-urls
 	* books/index.htrw
-	* the_gimp_2_2_pour_pc_mac_et_linux.png: applied patch from Joachim Noreiko
-	to add book by Julien Pons.
+	* the_gimp_2_2_pour_pc_mac_et_linux.png: applied patch from
+	Joachim Noreiko to add book by Julien Pons.
 
 2005-10-09  Karine Delvare  <kdelvare@nerim.net>
 
