updated for gimp-gap 2.2.0 release.
2005-10-28  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for gimp-gap 2.2.0 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-10-28  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for gimp-gap 2.2.0 release.
+
 2005-10-27  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.9 release.
