--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2005-11-15  Karine Delvare  <kdelvare@nerim.net>
+
+	* donating/sponsors.htrw: added Gimp-fr.org
+
 2005-11-05  Sven Neumann  <sven@gimp.org>
 
 	* index.htrw
