--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-11-20  Manish Singh  <yosh@gimp.org>
+
+	* install.sh
+	* INSTALL: require python 2.3, and default to using it.
+
 2005-11-18  Simon Budig  <simon@gimp.org>
 
 	* tutorials/Basic_Batch/index.htrw: added a warning that the
