updated for 2.2.10 release.
2005-12-27  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.2.10 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,7 @@
 2005-12-27  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw: updated for 2.2.10 release.
+
 	* about/splash/splash-images/gimp-splash-1.6.2.1-t.png
 	* about/splash/splash-images/gimp-splash-1.6.2.1.png: anniversairy
 	splash screen.
