--- a/ChangeLog
+++ b/ChangeLog
@@ -3,7 +3,7 @@
 	* downloads/index.htrw: updated for 2.2.10 release.
 
 	* about/splash/splash-images/gimp-splash-1.6.2.1-t.png
-	* about/splash/splash-images/gimp-splash-1.6.2.1.png: anniversairy
+	* about/splash/splash-images/gimp-splash-1.6.2.1.png: anniversary
 	splash screen.
 
 	* admin/gimp-web-urls
