--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,8 @@
+2005-12-28  Sven Neumann  <sven@gimp.org>
+
+	* programmatic/contest/index.htrw: added a link to the fullscale
+	version of the winning splash screen.
+
 2005-12-27  Sven Neumann  <sven@gimp.org>
 
 	* downloads/index.htrw: updated for 2.2.10 release.
