--- a/ChangeLog
+++ b/ChangeLog
@@ -1,5 +1,9 @@
 2005-12-28  Sven Neumann  <sven@gimp.org>
 
+	* downloads/index.htrw: updated for 2.3.6 release.
+
+2005-12-28  Sven Neumann  <sven@gimp.org>
+
 	* programmatic/contest/index.htrw: added a link to the fullscale
 	version of the winning splash screen.
 
