--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-12  Sven Neumann  <sven@gimp.org>
+
+	* about/selling.htrw: fixed typo spotted by Mukund.
+
 2006-01-05  Sven Neumann  <sven@gimp.org>
 
 	* includes/wgo-admin-fini.xhtml
