--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-17  Sven Neumann  <sven@gimp.org>
+
+	* develop/index.htrw: added another link to developer.gimp.org
+
 2006-01-12  Sven Neumann  <sven@gimp.org>
 
 	* about/selling.htrw: fixed typo spotted by Mukund.
