--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-01-20  Raphaël Quinet  <raphael@gimp.org>
+
+	* source/howtos/stable-cvs-build.htrw: fixed broken link.
+
 2006-01-17  Sven Neumann  <sven@gimp.org>
 
 	* develop/index.htrw: added another link to developer.gimp.org
