updated for 2.3.7 release.
2006-02-08  Sven Neumann  <sven@gimp.org>

	* downloads/index.htrw: updated for 2.3.7 release.

--- a/ChangeLog
+++ b/ChangeLog
@@ -1,3 +1,7 @@
+2006-02-08  Sven Neumann  <sven@gimp.org>
+
+	* downloads/index.htrw: updated for 2.3.7 release.
+
 2006-01-23  Sven Neumann  <sven@gimp.org>
 
 	* tutorials/Basic_Batch/index.htrw: s/PDB Browser/Procedure Browser/
